// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RewardCard /> by default matches with snapshot 1`] = `
<div
  className="sc-fznyAO kngrya"
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "padding": "0 0.9375rem",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "17.1875rem",
          "flexGrow": 9999,
          "margin": "0.9375rem",
        }
      }
    >
      <h6
        className="k-u-color-font1 k-u-style-italic k-u-weight-bold"
        data-radium={true}
        style={
          Object {
            "fontSize": "1.5rem",
            "lineHeight": "2.125rem",
            "margin": "0 0 0.9375rem 0",
          }
        }
      >
        Custom title mount
      </h6>
      <span
        className="sc-AxiKw lerUPL"
      />
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Custom text description
      </p>
    </div>
  </div>
</div>
`;

exports[`<RewardCard /> with DiamondBadge matches with snapshot 1`] = `
<div
  className="sc-fznyAO kngrya"
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "padding": "0 0.9375rem",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "17.1875rem",
          "flexGrow": 9999,
          "margin": "0.9375rem",
        }
      }
    >
      <div
        className="sc-AxmLO bTYafk"
      >
        <span
          className="sc-AxhCb jkxheH"
          disabled={false}
        >
          <span
            className="sc-AxhUy jrGfRa"
          >
            <svg
              aria-hidden={true}
              className="sc-fzoLsD hTkdvG k-IconBadge__svg"
              height="28"
              viewBox="0 0 19 28"
              width="19"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14 14l-4 10-4-10h8zm5 0l-7 10 4-10h3zM4 14l4 10-7-10h3zm8-6l2 4H6l2-4h4zm3 0l4 4h-3l-2-4h1zM6 8l-2 4H1l4-4h1zm12.1070508-5.64951905l.75 1.2990381-3.4641016 2.00000005-.75-1.2990382 3.4641016-1.99999995zm-16.7141016 0L4.8570508 4.3504809l-.75 1.2990382L.6429492 3.64951905l.75-1.2990381zM10.5 0v4H9V0h1.5z"
                fill="#fff"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </span>
        <div
          className="sc-fzozJi bIJfbc"
        >
          <span
            className="k-u-color-font1 k-u-size-nano k-u-weight-bold"
          >
            Starred label
          </span>
          <span
            className="k-u-color-font1 k-u-size-nano"
          >
            Lorem ipsum
          </span>
        </div>
      </div>
      <h6
        className="k-u-color-font1 k-u-style-italic k-u-weight-bold"
        data-radium={true}
        style={
          Object {
            "fontSize": "1.5rem",
            "lineHeight": "2.125rem",
            "margin": "0 0 0.9375rem 0",
          }
        }
      >
        Custom title mount
      </h6>
      <span
        className="sc-AxiKw lerUPL"
      />
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Custom text description
      </p>
    </div>
  </div>
</div>
`;

exports[`<RewardCard /> with all props matches with snapshot 1`] = `
<div
  className="sc-fznyAO kngrya"
>
  <div
    style={
      Object {
        "display": "flex",
        "flexWrap": "wrap",
        "padding": "0 0.9375rem",
      }
    }
  >
    <div
      style={
        Object {
          "flexBasis": "17.1875rem",
          "flexGrow": 9999,
          "margin": "0.9375rem",
        }
      }
    >
      <div
        className="sc-AxgMl hASlPc"
      >
        <span
          className="sc-AxhCb jkxheH"
          disabled={false}
        >
          <span
            className="sc-AxhUy jrGfRa"
          >
            <svg
              aria-hidden={true}
              className="sc-Axmtr douNhl k-IconBadge__svg"
              height="16"
              viewBox="0 0 18 16"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Star
              </title>
              <path
                d="M8.999 0l1.93 5.974c.028.09.112.15.206.15l6.274-.013-5.084 3.68a.216.216 0 0 0-.079.242L14.198 16l-5.072-3.7a.216.216 0 0 0-.255 0L3.801 16l1.953-5.967a.216.216 0 0 0-.079-.243L.591 6.111l6.274.012c.094 0 .178-.06.207-.15L8.999 0z"
              />
            </svg>
          </span>
        </span>
        <div
          className="sc-AxheI kzcuhL"
        >
          <span
            className="k-u-color-font1 k-u-size-nano k-u-weight-bold"
          >
            Starred label
          </span>
          <span
            className="k-u-color-font1 k-u-size-nano"
          >
            Lorem ipsum
          </span>
        </div>
      </div>
      <h6
        className="k-u-color-font1 k-u-style-italic k-u-weight-bold"
        data-radium={true}
        style={
          Object {
            "fontSize": "1.5rem",
            "lineHeight": "2.125rem",
            "margin": "0 0 0.9375rem 0",
          }
        }
      >
        100$
      </h6>
      <span
        className="sc-AxiKw lerUPL"
      />
      <p
        className="k-u-color-font1 k-u-weight-bold"
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
      </p>
      <p
        className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
      >
        Superatis Tauri montis verticibus qui ad solis ortum sublimius attolluntur, Cilicia spatiis porrigitur late distentis dives bonis omnibus terra, eiusque lateri dextro adnexa Isauria, pari sorte uberi palmite viget et frugibus minutis, quam mediam navigabile flumen Calycadnus interscindit.
      </p>
      <ul
        className="sc-fzoyAV fiAkmP"
      >
        <li>
          <span
            className="k-u-color-font1 k-u-size-tiny k-u-weight-regular sc-fzpans eDrBTy"
            disabled={false}
          >
            Contributors: 
            <span
              className="k-u-weight-light"
            >
              35
            </span>
          </span>
        </li>
        <li>
          <span
            className="k-u-color-font1 k-u-size-tiny k-u-weight-regular sc-fzpans eDrBTy"
            disabled={false}
          >
            Availability: 
            <span
              className="k-u-weight-light"
            >
              42/1000
            </span>
          </span>
        </li>
        <li>
          <span
            className="k-u-color-font1 k-u-size-tiny k-u-weight-regular sc-fzpans djAKEm"
            disabled={false}
          >
            Delivery: 
            <span
              className="k-u-weight-light"
            >
              January 2019
            </span>
          </span>
        </li>
      </ul>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "flexBasis": "11.875rem",
          "flexGrow": 1,
          "marginBottom": "0.9375rem",
          "marginLeft": "0.9375rem",
          "marginRight": "0.9375rem",
          "marginTop": "0.9375rem",
        }
      }
    >
      <img
        alt="My reward"
        className="sc-fzplWN dLGokl"
        disabled={false}
        src="http://via.placeholder.com/200x240/caf4fe/caf4fe"
      />
    </div>
  </div>
  <div
    style={
      Object {
        "borderTop": "2px #eee solid",
        "display": "flex",
        "justifyContent": "center",
        "marginTop": "1.25rem",
      }
    }
  >
    <span
      className="sc-AxhCb dbedwk"
      disabled={false}
      style={
        Object {
          "marginTop": "-0.9375rem",
        }
      }
    >
      <span
        className="sc-AxhUy efrIZw"
      >
        <svg
          className="k-IconBadge__svg"
          fill="#fff"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          <path
            d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "flexWrap": "wrap",
        "justifyContent": "center",
        "marginBottom": "0.3125rem",
        "marginTop": "0.625rem",
        "padding": "0 0.9375rem",
      }
    }
  >
    <p
      className="k-u-color-font1 k-u-size-tiny"
    >
      You contributed to this project.
    </p>
    <a
      className="k-u-color-primary1 k-u-decoration-none k-u-size-tiny k-u-weight-regular"
      href="#"
    >
      Manage my contribution
    </a>
  </div>
</div>
`;

exports[`<RewardCard /> with legacy props matches with snapshot 1`] = `
<div
  data-radium={true}
  style={
    Object {
      "borderColor": "#eee",
      "borderStyle": "solid",
      "borderWidth": 2,
    }
  }
  withoutBorder={false}
>
  <div
    className="sc-AxjAm ekdWbF"
  >
    <div
      className="rmq-ac5e1496 rmq-5b3da7a1 rmq-ce79a9e0 k-Grid"
      data-radium={true}
      style={
        Object {
          "paddingLeft": 20,
          "paddingRight": 20,
        }
      }
    >
      <div
        className="k-Grid__col--12 k-Grid__col--7@s k-Grid__col--7@l"
        data-radium={true}
      >
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            className="sc-AxjAm jDynbx"
          >
            <h1
              className="sc-AxirZ gEwSiw"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom title amount
            </h1>
          </div>
          <div
            className="sc-AxjAm ccCISE"
          >
            <span
              className="sc-AxiKw gGNgIn"
            />
          </div>
          <div
            className="sc-AxjAm bpEnKz"
          >
            <p
              className="k-u-color-font1 k-u-size-huge k-u-weight-bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Custom title description
            </p>
          </div>
          <div
            className="sc-AxjAm bsGvJV"
          >
            <p
              className="k-Paragraph k-Paragraph--tertiary k-Paragraph--withoutMargin"
              style={
                Object {
                  "color": "#222",
                }
              }
            >
              Custom text description
            </p>
          </div>
        </div>
        <div
          data-radium={true}
          disabled={false}
          style={Object {}}
        >
          <div
            className="sc-AxjAm ccCISE"
          >
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Custom title contributors 
              <span
                className="k-u-weight-light"
              >
                Custom value contributors
              </span>
            </span>
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Custom title delivery 
              <span
                className="k-u-weight-light"
              >
                Custom value delivery
              </span>
            </span>
            <span
              className="rmq-ef57b76a k-u-color-font1 k-u-weight-regular"
              data-radium={true}
              style={
                Object {
                  "fontSize": 14,
                }
              }
            >
              Custom title availability 
              <span
                className="k-u-weight-light"
              >
                Custom value availability
              </span>
            </span>
          </div>
        </div>
        <div
          className="sc-AxjAm iOcWzD"
        >
          <button
            aria-labelledby="Custom text button"
            className="rmq-b016fca7 k-Button k-Button--helium k-Button--big"
            data-radium={true}
            disabled={false}
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "justifyContent": "center",
                "lineHeight": "1.3rem",
                "padding": "1.375rem 1.875rem",
                "width": "100%",
              }
            }
            tabIndex={null}
            type="button"
          >
            Custom text button
          </button>
          <div
            className="sc-AxjAm ksLovO"
          >
            <div
              data-radium={true}
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                className="sc-AxhCb dbedwk"
                disabled={false}
                style={
                  Object {
                    "marginRight": 10,
                  }
                }
              >
                <span
                  className="sc-AxhUy efrIZw"
                >
                  <svg
                    className="k-IconBadge__svg"
                    fill="#fff"
                    height="8"
                    viewBox="0 0 11 8"
                    width="11"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
                    <path
                      d="M.904 4.06l1.414-1.414L4.44 4.768 8.682.525l1.414 1.414L4.44 7.596.904 4.061z"
                    />
                  </svg>
                </span>
              </span>
              <div
                data-radium={true}
                style={
                  Object {
                    "display": "flex",
                    "lineHeight": "normal",
                  }
                }
              >
                <span
                  className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
                >
                  Custom my contribution
                  <br />
                  <a
                    className="k-u-color-primary1 k-u-decoration-none k-u-weight-regular"
                    href="Custom manage link contribution"
                  >
                    Custom manage contribution
                  </a>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="rmq-c7c1445b k-Grid__col--12 k-Grid__col--4@s k-Grid__col--offset-1@s"
        data-radium={true}
        style={Object {}}
      >
        <div
          className="sc-AxjAm StDqN"
        >
          <div
            data-radium={true}
            disabled={false}
            style={Object {}}
          >
            <img
              alt="Image alt"
              data-radium={true}
              src="#image"
              style={
                Object {
                  "display": "block",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@media (min-width: 640px){ .rmq-ac5e1496{padding-left: 30px !important;
padding-right: 30px !important;}}
@media (min-width: 768px){ .rmq-5b3da7a1{padding-left: 40px !important;
padding-right: 0 !important;}}
@media (min-width: 1080px){ .rmq-ce79a9e0{padding-left: 115px !important;
padding-right: 0 !important;}}
@media (min-width: 768px){ .rmq-ef57b76a{font-size: 16px !important;
margin-right: 30px !important;}}
@media (max-width: 767px){ .rmq-b016fca7{width: calc(100% + 4px) !important;
position: relative !important;
left: -2px !important;
bottom: -2px !important;}}
@media (min-width: 768px){ .rmq-c7c1445b{padding-right: 50px !important;}}",
      }
    }
  />
</div>
`;
